--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,17 @@ version = "0.0.0"
 description = "Cogito is a Python module designed to streamline the creation and deployment of inference services. It provides tools and abstractions to wrap machine learning models and expose them as robust, production-ready APIs with minimal effort."
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.6",
+    "pydantic>=2.10.5",
+    "uvicorn>=0.34.0",
+]
 
 [dependency-groups]
 dev = [
     "black>=24.10.0",
     "flake8>=7.1.1",
+    "jupyter>=1.1.1",
     "pytest>=8.3.4",
     "setuptools>=75.6.0",
 ]
