fix(.github/workflows/publish-to-pypi.yaml): disable tagging temporaly
- Remove the script for generating a new tag from Git commit messages
- Insert comments to explain the removed code
- Keep the existing step for publishing to PyPI, but remove the condition that triggers it based on the presence of a new tag

--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -24,9 +24,9 @@ jobs:
       run: |
         git fetch --tags
         cz bump --yes --dry-run
-        NEW_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
-        echo "New tag: $NEW_TAG"
-        echo "::set-output name=new_tag::$NEW_TAG"
+#         NEW_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+#         echo "New tag: $NEW_TAG"
+#         echo "::set-output name=new_tag::$NEW_TAG"
 
 #    - name: Publish to PyPI
 #      if: steps.tag.outputs.new_tag != ''
