--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.6",
     "pydantic>=2.10.5",
     "pyyaml>=6.0.2",
+    "structlog>=25.1.0",
     "uvicorn>=0.34.0",
 ]
 
