feat: Implements type inspection of predict methods (#20)
* feat: Implements type inspection of predict methods

* fix: Add egg-info paths to .gitignore

* feat: Changed from __annotations__ to inspect strategy

Updated Makefile: added tests stuff

* feat: Builds annotations of input and output handlers

* feat: Added tests to wraping function

Cleaned old code

* refactor: Renamed function

* feat: Added dev-build and dev-dependencies target to Makefile

* refactor: Format change

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,7 @@ update_changelog_on_bump = true
 version_files = [
     'setup.py:version',
 ]
+
+[tool.pytest.ini_options]
+minversion = "8.0"
+testpaths = ["tests"]
