--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,32 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "cogito"
 version = "0.0.0"
 description = "Cogito is a Python module designed to streamline the creation and deployment of inference services. It provides tools and abstractions to wrap machine learning models and expose them as robust, production-ready APIs with minimal effort."
+authors = [
+    {name = "freepik-company/tech-avengers", email = "aivengers@freepik.com"}
+]
 readme = "README.md"
 requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 dependencies = [
+    "build>=1.2.2.post1",
     "click>=8.1.8",
     "fastapi>=0.115.6",
     "jinja2>=3.1.5",
     "pydantic>=2.10.5",
     "pyyaml>=6.0.2",
+    "setuptools>=75.8.0",
     "structlog>=25.1.0",
     "uvicorn>=0.34.0",
+    "wheel>=0.45.1",
 ]
 
 [dependency-groups]
@@ -22,6 +37,10 @@ dev = [
     "pytest>=8.3.4",
     "setuptools>=75.6.0",
 ]
+
+[project.urls]
+Homepage = "https://github.com/freepik-company/fc-py-cogito"
+Issues = "https://https://github.com/freepik-company/fc-py-cogito/issues"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
