ci(.github/workflows/publish-to-pypi-and-test-pypi.yml): Update workflow for PyPI and TestPyPI publication
- Modified if conditions for publishing to PyPI and TestPyPI based on branch names
- Added a new workflow environment and URL for TestPyPI publication
- Updated permissions for trusted publishing in both PyPI and TestPyPI workflows
- Removed unnecessary condition for publishing to PyPI from the main branch
- Added similar condition for publishing to PyPI from the develop branch (11-build-and-publish-cogito-as-a-pip-module)

--- a/.github/workflows/publish-to-pypi-and-test-pypi.yml
+++ b/.github/workflows/publish-to-pypi-and-test-pypi.yml
@@ -96,8 +96,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
-    #if: github.ref == 'refs/heads/main'  # only publish to PyPI on pushes to main branch
-    if: github.ref == 'refs/heads/11-build-and-publish-cogito-as-a-pip-module'  # only publish to PyPI on pushes to develop branch
+    if: github.ref == 'refs/heads/main'  # only publish to PyPI on pushes to main branch
     needs:
     - build
     runs-on: ubuntu-latest
