chore(pyproject.toml): Update build-system requirements, project metadata and tool.commitizen settings
- Update dependencies to their latest versions
- Update project description and authors
- Enable automatic changelog updates on version bump
- Add Issues URL for reporting issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dev = [
 
 [project.urls]
 Homepage = "https://github.com/freepik-company/fc-py-cogito"
-Issues = "https://https://github.com/freepik-company/fc-py-cogito/issues"
+Issues = "https://github.com/freepik-company/fc-py-cogito/issues"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
