--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,21 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "cogito"
-version = "0.0.0"
+version = "0.0.1"
 description = "Cogito is a Python module designed to streamline the creation and deployment of inference services. It provides tools and abstractions to wrap machine learning models and expose them as robust, production-ready APIs with minimal effort."
+authors = [
+    {name = "freepik-company/tech-avengers", email = "aivengers@freepik.com"}
+]
 readme = "README.md"
 requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 dependencies = [
     "click>=8.1.8",
     "fastapi>=0.115.6",
@@ -17,11 +29,17 @@ dependencies = [
 [dependency-groups]
 dev = [
     "black>=24.10.0",
+    "build>=1.2.2.post1",
     "flake8>=7.1.1",
     "jupyter>=1.1.1",
     "pytest>=8.3.4",
     "setuptools>=75.6.0",
+    "wheel>=0.45.1",
 ]
+
+[project.urls]
+Homepage = "https://github.com/freepik-company/fc-py-cogito"
+Issues = "https://github.com/freepik-company/fc-py-cogito/issues"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
@@ -29,9 +47,6 @@ tag_format = "$version"
 version_scheme = "pep440"
 version_provider = "pep621"
 update_changelog_on_bump = true
-version_files = [
-    'setup.py:version',
-]
 
 [tool.pytest.ini_options]
 minversion = "8.0"
