--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,5 @@ repos:
     rev: 24.10.0
     hooks:
       - id: black
+        files: \.py$  # This ensures black runs only on Python files
+        exclude: ^\.venv/  # Excludes the virtual environment directory
