--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "build>=1.2.2.post1",
     "flake8>=7.1.1",
     "jupyter>=1.1.1",
+    "pre-commit>=4.1.0",
     "pytest>=8.3.4",
     "setuptools>=75.6.0",
     "wheel>=0.45.1",
