chore: Refactor project structure and reorganize files
   - Move Cogito related files to inferia directory
   - Delete Cogito directory
   - Remove unnecessary import statements from examples/example.py
   - Create new files for Inferia API handlers, CLI, core exceptions, and logging
   - Update .github/workflows/publish-to-pypi-and-test-pypi.yml to reflect changes in project name
   - Delete unnecessary files from cogito and inferia directories
   - Create a new file for Inferia core models

--- a/.github/workflows/publish-to-pypi-and-test-pypi.yml
+++ b/.github/workflows/publish-to-pypi-and-test-pypi.yml
@@ -81,7 +81,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/project/cogito/
+      url: https://pypi.org/project/inferia/
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
     steps:
@@ -103,7 +103,7 @@ jobs:
 
     environment:
       name: testpypi
-      url: https://test.pypi.org/project/cogito/
+      url: https://test.pypi.org/project/inferia/
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
