feat(cli): adds run cli command (#35)
* feat(cli): adds run cli command

* fix: changed the run command logic

* refactor: Removes old example.py useless with run command

* fix: removed useless import

* feat(pyproject.toml-and-README.md): Added inferia as cli command

Now you can run `inferia run`, `inferia scafold` or `inferia init` as commands

ADded usage in README.md

* fix: renamed command line to inferia-cli

* docs: added commands reference

* docs: added -c option to run command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,6 @@ update_changelog_on_bump = true
 [tool.pytest.ini_options]
 minversion = "8.0"
 testpaths = ["tests"]
+
+[project.scripts]
+inferia-cli = "inferia.cli:main"
