--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "click>=8.1.8",
     "fastapi>=0.115.6",
     "jinja2>=3.1.5",
+    "opentelemetry-exporter-prometheus>=0.50b0",
+    "opentelemetry-instrumentation-fastapi>=0.50b0",
+    "opentelemetry-sdk>=1.29.0",
+    "prometheus-client>=0.21.1",
     "pydantic>=2.10.5",
     "pyyaml>=6.0.2",
     "structlog>=25.1.0",
