--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
     "google-cloud-storage>=2.19.0",
     "huggingface-hub>=0.27.1",
     "jinja2>=3.1.5",
+    "opentelemetry-exporter-prometheus>=0.50b0",
+    "opentelemetry-instrumentation-fastapi>=0.50b0",
+    "opentelemetry-sdk>=1.29.0",
+    "prometheus-client>=0.21.1",
     "pydantic>=2.10.5",
     "pyyaml>=6.0.2",
     "structlog>=25.1.0",
