--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ classifiers = [
 dependencies = [
     "click>=8.1.8",
     "fastapi>=0.115.6",
+    "google-cloud-storage>=2.19.0",
+    "huggingface-hub>=0.27.1",
     "jinja2>=3.1.5",
     "pydantic>=2.10.5",
     "pyyaml>=6.0.2",
