refactor: use cache dir from config file and added default one

--- a/examples/inferia.yaml
+++ b/examples/inferia.yaml
@@ -26,5 +26,6 @@ inferia:
         predictor: "predict:BadPredictor"
         tags:
           - bad
+    cache_dir: "~/.inferia/models"
     version: 0.1.0
   training: { }
