fix: Fix assert on test for base Model and ResultResponse. On utils.py, return the response model instead of the __class__

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,3 +5,10 @@ repos:
       - id: black
         files: \.py$  # This ensures black runs only on Python files
         exclude: ^\.venv/  # Excludes the virtual environment directory
+  - repo: local
+    hooks:
+      - id: pytest
+        name: Run Pytest
+        entry: pytest --maxfail=1 --disable-warnings -q
+        language: system
+        types: [python]        
