fix: renamed readyness with readiness (typo)

--- a/examples/cogito.yaml
+++ b/examples/cogito.yaml
@@ -1,6 +1,6 @@
 cogito:
   server:
-    readyness_file: /tmp/cogito-readyness.lock
+    readiness_file: /tmp/cogito-readiness.lock
     cache_dir: /tmp/cogito
     description: Inference server
     threads: 4
