feat: Add readiness file support for health checks and application startup (#72)
* feat: Add readiness file support for health checks and application startup

- Introduce readyness_file configuration in ServerConfig
- Update health check handler to always return OK status
- Add readyness context manager to create/remove readiness lock file
- Modify initialization command to prompt for readiness file path
- Update setup process to handle both async and sync predictor setup
- Improve platform-specific dependency markers in uv.lock

Adds readiness file support for health checks

Introduces a configurable readiness file for health checks to enhance application startup validations. Updates the health check handler to always return an "OK" status.

Implements a context manager for managing the readiness lock file lifecycle and prompts for the readiness file path during initialization. Enhances the setup process to accommodate both async and sync predictor setups.

Improves package dependency markers in the configuration for better platform compatibility.

* fix: renamed readyness with readiness (typo)

--- a/examples/cogito.yaml
+++ b/examples/cogito.yaml
@@ -1,5 +1,6 @@
 cogito:
   server:
+    readiness_file: /tmp/cogito-readiness.lock
     cache_dir: /tmp/cogito
     description: Inference server
     threads: 4
