--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi>=0.50b0",
     "opentelemetry-sdk>=1.29.0",
     "prometheus-client>=0.21.1",
-    "pydantic",
+    "pydantic>=1.10.0,<3.0.0",
     "pyyaml>=6.0.2",
     "structlog>=25.1.0",
     "uvicorn>=0.34.0",
