--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pydantic>=1.10.0,<3.0.0",
     "pyyaml>=6.0.2",
     "structlog>=25.1.0",
+    "tomli>=2.0.1",
     "uvicorn>=0.34.0",
 ]
 
