--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "click>=8.1.8",
     "fastapi>=0.115.6",
     "google-cloud-storage>=2.19.0",
-    "huggingface-hub>=0.27.1",
+    "huggingface-hub",
     "jinja2>=3.1.5",
     "opentelemetry-exporter-prometheus>=0.50b0",
     "opentelemetry-instrumentation-fastapi>=0.50b0",
